[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.13.1",
    "aioredis==2.0.1",
    "alembic==1.13.3",
    "apscheduler==3.10.4",
    "asyncpg==0.29.0",
    "cryptography==43.0.1",
    "loguru==0.7.2",
    "pillow==10.4.0",
    "pydantic-settings>=2.9.1",
    "pydantic==2.9.2",
    "python-dateutil==2.9.0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "redis==5.1.1",
    "sqlalchemy==2.0.35",
    "typing-extensions==4.12.2",
]
